copy hack test2

--- a/play/index.html
+++ b/play/index.html
@@ -100,5 +100,10 @@ try {
   codeXHR.send(null);
 }
 </script>
+    <script type='text/javascript'>
+      function CopyHack(x) {
+        x = prompt("Copy string: ", x);
+      }
+    </script>
   </body>
 </html>
