--- a/play/index.html
+++ b/play/index.html
@@ -103,6 +103,9 @@ try {
     <script type='text/javascript'>
       function CopyHack(x) {
         x = prompt("Copy string: ", x);
+        if (x != null) {
+          SendMessage ('GameSystems', 'ExternalHack', x);
+        }
       }
     </script>
   </body>
